--- a/_core.functions.scss
+++ b/_core.functions.scss
@@ -9,13 +9,11 @@ $core: null !default;
 /*****************/
 
 /**
-* @file _core.functions.scss
+* @file _core-functions.scss
 *
-* @copyright (c) Locomotive 2013
-* @author Nicolas Poliquin <nic@locomotive.ca>
-* @version @Wed Mar  6 11:45:56 EST 2013
-* @since Version 2013-01-07
-* @license (c) Locomotive 2013
+* @author Nicolas Poliquin <nicolas@polikin.ca>
+* @version @Mon Jul  8 15:40:21 EDT 2013
+* @license (c) Polikin.ca 2013
 */
 
 /*****************/
